# multimodal-transport

./: .dockerignore  .env.production  .gitignore  API_DOCUMENTATION.md  CLOUD_SECURITY_GUIDE.md  CMakeLists.txt  COMPLETE_TECHNICAL_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  Dockerfile.backend  Makefile  README-DOCKER.md  README.md  Stable_match_nTo1.cpp  api_test.py  app.py  backend_todo.md  check_routes.py  cloud-debug.sh  debug-network.sh  debug_network_issue.py  deploy-on-server.sh  deploy-production.sh  deploy-traditional.sh  deploy-windows.bat  deploy-with-cpp.sh  deploy.sh  design_document.md  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.ssl.yml  docker-compose.yml  docker-deploy.bat  docker-deploy.sh  docker-entrypoint.sh  docker-run-commands.sh  frontend_requirements.md  frontend_server.py  patch_main.py  pyproject.toml  quick-start.sh  (+9 more)
.promptx/: pouch.json
app/: config.py
data/: cooperation_parameter.csv  data_description.md  network.csv  route.csv  scenes.json  shipment.csv
docs/: API接口文档.md  api_documentation.md  match_model_analysis.md  matching-animation-design.md  models_overview.md  network_model_analysis.md  route_model_analysis.md  shipment_model_analysis.md  前端界面说明.md  后端逻辑说明.md  后续展示优化建议.md  系统总说明.md
frontend/: .dockerignore  DEPLOY_QUICK_START.md  Dockerfile.frontend  NGINX_DEPLOY_GUIDE.md  deploy-nginx.bat  deploy-to-nginx.bat  index.html  nginx-complete.conf  nginx-docker.conf  nginx-simple.conf  nginx.conf  package-lock.json  package.json  quick-deploy.bat  styles.css
nginx/: Dockerfile.nginx  nginx.conf
(+80 files in other folders)
